# umps3

./: .gitignore  CMakeLists.txt  README.md  Uninstall.cmake  config.h.in
examples/hello-umps/: Makefile-templ  hello.c
examples/termio/: Makefile-templ
man/: CMakeLists.txt  Makefile  umps3-elf2umps.1  umps3-elf2umps.1.md  umps3-elf2umps.1.ronn  umps3-mkdev.1  umps3-mkdev.1.md  umps3-mkdev.1.ronn  umps3-objdump.1  umps3-objdump.1.md  umps3-objdump.1.ronn  umps3.1  umps3.1.md  umps3.1.ronn
patch/: Qt5.9.patch  Qt5.patch
src/: CMakeLists.txt
src/base/: CMakeLists.txt  basic_types.h  bit_tricks.h  debug.h  json.cc  json.h  lang.h  trackable_mixin.cc  trackable_mixin.h
src/frontends/: CMakeLists.txt
src/frontends/qmps/: CMakeLists.txt  add_breakpoint_dialog.cc  add_breakpoint_dialog.h  add_suspect_dialog.cc  add_suspect_dialog.h  add_tracepoint_dialog.cc  add_tracepoint_dialog.h  address_line_edit.cc  address_line_edit.h  application.cc  application.h  boolean_item_delegate.cc  boolean_item_delegate.h  code_view.cc  code_view.h  code_view_priv.h  cpu_status_map.cc  cpu_status_map.h  create_machine_dialog.cc  create_machine_dialog.h  debug_session.cc  debug_session.h  device_tree_model.cc  device_tree_model.h  device_tree_view.cc  device_tree_view.h  error_hooks.cc  flat_push_button.cc  flat_push_button.h  hex_view.cc  hex_view.h  hex_view_priv.h  mac_id_edit.cc  mac_id_edit.h  machine_config_dialog.cc  machine_config_dialog.h  machine_config_dialog_priv.h  machine_config_view.cc  machine_config_view.h  main.cc  (+37 more)
src/frontends/qmps/data/: CMakeLists.txt  org.virtualsquare.umps3.desktop  org.virtualsquare.umps3.metainfo.xml  umps3.desktop
src/frontends/qmps/data/icons/: CMakeLists.txt
src/include/: CMakeLists.txt
src/include/umps/: CMakeLists.txt  aout.h  arch.h  bios_defs.h  cp0.h  regdef.h
src/support/: CMakeLists.txt
src/support/bios/: CMakeLists.txt  coreboot.S  exec.S  tapeboot.S
src/support/crt/: CMakeLists.txt  crti.S  crtso.S
src/support/ldscripts/: CMakeLists.txt
src/support/legacy/: CMakeLists.txt  crti_pic.S  crtso_pic.S  elf32btsmip.h.umpscore.x  elf32ltsmip.h.umpsaout.x  elf32ltsmip.h.umpscore.x
src/support/libumps/: CMakeLists.txt  const.h  libumps.S  libumps.h  types.h
src/tests/: CMakeLists.txt  test_json_serialize.cc
src/umps/: CMakeLists.txt  blockdev.cc  blockdev.h  blockdev_params.h  const.h  device.cc  device.h  disassemble.cc  disassemble.h  elf2umps.cc  error.h  event.cc  event.h  libvdeplug_dyn.h  machine.cc  machine.h  machine_config.cc  machine_config.h  memspace.cc  memspace.h  mkdev.cc  mp_controller.cc  mp_controller.h  mpic.cc  mpic.h  objdump.cc  processor.cc  processor.h  processor_defs.h  stoppoint.cc  stoppoint.h  symbol_table.cc  symbol_table.h  systembus.cc  systembus.h  time_stamp.cc  time_stamp.h  types.h  utility.cc  utility.h  (+2 more)
